[package]
name = "vmadm"
version = "0.1.0"
authors = ["Heinz N. Gies <heinz@project-fifo.net>"]

[dependencies]
serde = "1.0.8"
serde_json = "1.0.2"
serde_derive = "1.0.8"
uuid = { version = "0.5", features = ["serde", "v4"] }
toml = "0.4"
clippy = {version = "*", optional = true}
slog = "2.0.6"
slog-term = "2.0.1"
slog-async = "2.0.1"

[dependencies.clap]
version = "2.24.2"
features = ["yaml"]