[package]
name = "vmadm"
version = "0.1.0"
authors = ["Heinz N. Gies <heinz@project-fifo.net>"]

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
uuid = { version = "0.5", features = ["serde", "v4"] }
toml = "0.4"
clippy = { version = "*", optional = true }
slog = "2"
#slog-term = "2"
slog-async = "2"
slog-scope = "2"
slog-bunyan = "2"

[dependencies.clap]
version = "2"
features = ["yaml"]